Fix validation yellow (so it has better contrast on light theme)

--- a/src/app/route-components/password-reset/password-reset.component.scss
+++ b/src/app/route-components/password-reset/password-reset.component.scss
@@ -29,7 +29,7 @@
 		}
 
 		&.ok {
-			color: yellow;
+			color: #c4c400;
 		}
 
 		&.strong {
@@ -58,7 +58,7 @@
 		}
 
 		&.ok {
-			border-color: #ffff0077;
+			border-color: #c4c40077;
 		}
 
 		&.strong {
